client/src/components/Styles/projects.css
/* ... */
#edit-position-details>#edit-position-details-left>label,
#edit-position-details>#edit-position-details-right>label {
  font-size: 1rem;
}

#edit-position-details-left {
  display: grid;
  grid-template: 1fr 1fr 1fr / 1fr 2fr;
  grid-template-areas:
    'availability-label availability-input'
    'location-label location-input'
    'contact-label contact-input';
  gap: 8px;
  align-items: center;
}

label.edit-position-availability {
  grid-area: availability-label;
}

select.edit-position-availability {
  grid-area: availability-input;
}

.edit-position-details-left .select-container {
  grid-area: availability-input;
}

label.edit-position-location {
  grid-area: location-label;
}

select.edit-position-location {
  grid-area: location-input;
}

label.edit-position-contact {
  grid-area: contact-label;
}

button.edit-position-contact {
  grid-area: contact-input;
  display: flex;
  background-color: var(--bg-color);
  border: 1px solid var(--border-color);
  border-radius: 10px;
  padding: 15px;
  cursor: default;
}

.select-option.edit-position-contact {
  display: flex;
  gap: 5px;
  padding: 5px 15px;
}

button.edit-position-contact .project-member-image {
  width: 32px;
  height: 32px;
}

/* Selected contact in edit position */
.edit-position-contact .value {
  display: flex;
  gap: 5px;
}

.value .project-editor-project-member-name {
  font-size: 0.875rem;
}

#edit-position-details-right {
  display: grid;
  grid-template: 1fr 1fr 1fr / 1fr 2fr;
  grid-template-areas:
    'duration-label duration-input'
    'compensation-label compensation-input'
    '. .';
  gap: 8px;
  align-items: center;
}

label.edit-position-duration {
  grid-area: duration-label;
}

select.edit-position-duration {
  grid-area: duration-input;
}

label.edit-position-compensation {
  grid-area: compensation-label;
}

select.edit-position-compensation {
  grid-area: compensation-input;
}

#edit-position-details label {
  justify-self: end;
  font-size: 1rem;
  text-wrap: nowrap;
}

.positions-popup-info select {
  justify-self: stretch;
  font-style: normal;
  margin: 0 !important;
}

#position-edit-cancel {
  color: var(--primary-color);
  font-size: 1rem;
  font-weight: 700;
}

#edit-position-description {
  display: flex;
  flex-direction: column;
  gap: 8px;
  flex: 1 0 0;
}

/* Project Editor/Creator Links Tab */
#link-save-info {
  display: flex;
  justify-content: center;
  margin-top: auto;
}

#base-url {
  margin: auto auto auto 0px;
  text-wrap: nowrap;
  font-size: 0.9375rem;
}

.delete-social-btn {
  padding: 4px;
  background: none;
  border: none;
  cursor: pointer;
}

/* #endregion */



/*
/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
------------------------------------------------------------------------------------------------
Project page style rules
------------------------------------------------------------------------------------------------
\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\//\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
*/
/* #region project-page */

/*used for the header section of the page (with the project title, description & other options)*/
#project-info {
  display: grid;
  grid-template: 0.3fr 1fr auto / 0.2fr 1.5fr 550px;
  grid-template-areas:
    'blank blank listing'
    'picture header listing'
    'desc desc listing';
}

/*rules for the header used when a project member is viewing the page*/
#project-info-member {
  display: grid;
  grid-template: 1fr 1fr / 0.2fr 1fr 200px 400px;
  grid-template-areas:
    'picture header buttons listing'
    'desc desc buttons listing';
}

/*rules for the 'enter virtual space' and 'new post' buttons on the header view for members*/
#member-buttons {
  grid-area: buttons;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  margin: 15px 20px;
}

/*rules for the picture in the top left of the page, used as a profile for the project itself*/
#project-picture {
  width: 96px;
  height: 96px;
  grid-area: picture;
}

/*rules for the header of the project & for nearby buttons*/
#project-header {
  grid-area: header;
  text-align: left;
  display: grid;
  grid-template: auto auto auto/ auto auto auto;
  grid-template-areas:
    'title status buttons'
    'owner count buttons'
    'tags members buttons';
  gap: 5px;
}

#project-status {
  grid-area: status;
  margin-top: auto;
  margin-bottom: auto;
}

#project-owner {
  grid-area: owner;
}

#project-member-count {
  grid-area: count;
}

#project-tags {
  grid-area: tags;
  display: flex;
  justify-content: baseline;
  gap: 10px;
  margin-top: 10px;
}

.project-tag {
  border: 2px solid var(--orange);
  padding: 2px;
  border-radius: 5px;
  width: 150px;
  height: min-content;
  text-align: center;
}

#project-member-preview {
  grid-area: members;
  position: relative;
  height: 50px;
}

#project-member-preview img {
  background-color: var(--primary-color);
  position: absolute;
  width: 50px;
  border-radius: 100%;
  padding: 2px;
}

#project-member-preview span {
  position: absolute;
  top: 20px;
  right: 0px;
}

#project-member-preview span:hover {
  color: var(--hover-blue);
  text-decoration: underline;
  cursor: pointer;
}

#member-preview-1 {
  left: 0px;
}

#member-preview-2 {
  z-index: -1;
  left: 20px;
}

#member-preview-3 {
  z-index: -2;
  left: 40px;
}

#follow-project {
  width: 100px;
  height: 40px;
}

/*rules for the member details popup*/
#project-member-chart {
  padding: 0 calc((rem(80vw, 200px) / 2) - 20px);
  height: calc(80vh - 100px);
  display: flex;
  flex-wrap: wrap;
  overflow-y: auto;
}

/*rules for the more options dropdown menu*/
#more-options-popup {
  position: absolute;
  background-color: var(--primary-color);
  box-shadow: 0px 0px 10px 0px var(--shadow-color);

  width: 200px;
  height: 100px;
}

#more-options-popup button {
  display: block;
  border: 1px solid rgb(209, 209, 209);
  width: 90%;
  height: 40%;
  margin: 2.5% auto;
}
/* ... */

